--- a/02-Web_Fundamentals/Web Project/main.scss
+++ b/02-Web_Fundamentals/Web Project/main.scss
@@ -1,4 +1,85 @@
 $color-main: purple;
-$color-secondary: rgb(0, 247, 255);
+$color-secondary: lightblue;
 $color-background: #fafafa;
 $color-footer: rgb(255, 255, 121);
+
+* {
+    margin: 5px;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+a:link, a:visited {
+    text-decoration: none;  
+}
+
+nav {
+    width: 100%;
+    height: 100px;
+    background-color: $color-background;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    img {
+        height: 100%;
+    }
+
+    a {
+        color: $color-main;
+        background-color: $color-background;
+        width: 33%;
+        height: 100%;
+        font-size: 30px;
+        font-weight: bolder;
+        border: solid 3px $color-main;
+        border-radius: 10px;
+        padding: 20px 50px;
+    }
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .text {
+        display: flex;
+        justify-content: center;
+    }
+
+    h1 {
+        color: $color-secondary;
+        font-weight: bolder;
+    }
+
+    h2 {
+        width: 75%;
+        text-align: center;
+        color: $color-main;
+        font-size: 40px;
+    }
+
+    h3 {
+        text-align: center;
+        color: $color-secondary;
+        font-size: 30px;
+    }
+
+    p {
+        color: $color-main;
+        font-size: 25px;
+    }
+
+    a {
+        color: $color-background;
+        background-color: $color-main;
+        font-size: 35px;
+        font-weight: bolder;
+        border: 5px solid $color-main;
+        border-radius: 15px;
+        padding: 15px 45px;
+        margin: 5px 5px;
+
+    }
+}
